# ore-hq-standalone-miner

./: Cargo.toml
src/: lib.rs
